tests/ui/keyword/reserved-become.stderr
error: expected identifier, found reserved keyword `become`
  --> $DIR/reserved-become.rs:2:9
   |
LL |     let become = 0;
   |         ^^^^^^ expected identifier, found reserved keyword
   |
help: escape `become` to use it as an identifier
   |
LL |     let r#become = 0;
   |         ++

error: aborting due to 1 previous error

